k8s/prod/board.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board
  namespace: board-prod
  labels:
    app: board
    project: board
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board
      environment: prod
      project: board
  template:
    metadata:
      labels:
        app: board
        project: board
        environment: prod
    spec:
      containers:
      - name: board
        image: board:prod
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
