k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board
  namespace: board-prod
  labels:
    project: board
    environment: prod
spec:
  ingressClassName: nginx
  rules:
  - host: "board.abyssworks.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: board
            port:
              number: 80
